--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "truck_fleet",
   "version": "0.1.0",
-  "proxy": "http://192.168.1.95:8000",
+  "proxy": "http://13.233.224.46/",
   "private": true,
   "dependencies": {
     "@react-google-maps/api": "^2.19.2",
