--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "truck_fleet",
+  "name": "qr-restaurant",
   "version": "0.1.0",
   "proxy": "http://13.233.224.46/",
   "private": true,
