--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apexcharts": "^3.42.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.3",
     "js-file-download": "^0.4.12",
     "multiselect-react-dropdown": "^2.0.25",
