--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-otp-input": "^3.1.0",
     "react-paginate": "^8.2.0",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
