--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-apexcharts": "^1.4.1",
+    "swiper": "^10.0.0",
     "react-avatar": "^5.0.3",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
