--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # REACT_APP_BASE_URL=http://192.168.1.97:8000/
-REACT_APP_BASE_URL=http://13.233.224.46/
+# REACT_APP_BASE_URL=http://13.233.224.46/
+REACT_APP_BASE_URL=http://43.205.20.146/
