--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qr-restaurant",
-  "version": "0.1.0", 
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@react-google-maps/api": "^2.19.2",
@@ -18,7 +18,6 @@
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-apexcharts": "^1.4.1",
-    "swiper": "^10.0.0",
     "react-avatar": "^5.0.3",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
@@ -35,6 +34,8 @@
     "react-web-share": "^2.0.2",
     "reactjs-localstorage": "^1.0.1",
     "reactjs-popup": "^2.0.5",
+    "stripe": "^14.5.0",
+    "swiper": "^10.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
