--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-apexcharts": "^1.4.1",
     "react-avatar": "^5.0.3",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.9.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-otp-input": "^3.1.0",
