--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.0",
     "file-saver": "^2.0.5",
     "formik": "^2.4.3",
+    "i18next": "^23.7.7",
     "js-file-download": "^0.4.12",
     "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
@@ -24,6 +25,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.5.0",
     "react-loader-spinner": "^5.3.4",
     "react-otp-input": "^3.1.0",
     "react-paginate": "^8.2.0",
