--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apexcharts": "^3.42.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "env-cmd": "^10.1.0",
     "file-saver": "^2.0.5",
     "formik": "^2.4.3",
     "i18next": "^23.7.7",
@@ -46,7 +47,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:dev": "env-cmd -f .dev.env npm start",
+    "start:prod": "env-cmd -f .prod.env npm start",
     "build": "react-scripts build",
+    "build:dev": "env-cmd -f .dev.env npm run build",
+    "build:prod": "env-cmd -f .prod.env npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
