--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apexcharts": "^3.42.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "currency-symbol-map": "^5.1.0",
     "env-cmd": "^10.1.0",
     "file-saver": "^2.0.5",
     "formik": "^2.4.3",
