--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "build:dev": "env-cmd -f .dev.env npm run build",
     "build:prod": "env-cmd -f .prod.env npm run build",
     "deploy:dev" : "aws s3 cp ./build/ s3://restaurant-frontend --recursive",
+    "deploy:prod" : "aws s3 cp ./build/ s3://app.harborbites.com --recursive",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
