--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^13.5.0",
     "react-loader-spinner": "^5.3.4",
     "react-otp-input": "^3.1.0",
@@ -53,8 +54,8 @@
     "build": "react-scripts build",
     "build:dev": "env-cmd -f .dev.env npm run build",
     "build:prod": "env-cmd -f .prod.env npm run build",
-    "deploy:dev" : "aws s3 cp ./build/ s3://restaurant-frontend --recursive",
-    "deploy:prod" : "aws s3 cp ./build/ s3://app.harborbites.com --recursive",
+    "deploy:dev": "aws s3 cp ./build/ s3://restaurant-frontend --recursive",
+    "deploy:prod": "aws s3 cp ./build/ s3://app.harborbites.com --recursive",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
