--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,12 @@
 # production
 /build
 
+# Documentation
+/docs
+./docs
+/docs/*
+
+
 # misc
 .DS_Store
 .env.local
@@ -23,6 +29,11 @@
 ./.dev.env
 .prod.env
 .dev.env
+
+doc.txt
+./doc.txt
+
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
