--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "env-cmd": "^10.1.0",
     "file-saver": "^2.0.5",
     "formik": "^2.4.3",
+    "i": "^0.3.7",
     "i18next": "^23.7.7",
     "js-file-download": "^0.4.12",
     "jsdoc": "^4.0.2",
     "multiselect-react-dropdown": "^2.0.25",
+    "npm": "^10.5.0",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-apexcharts": "^1.4.1",
     "react-avatar": "^5.0.3",
     "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.9.1",
+    "react-daterange-picker": "^2.0.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
@@ -58,7 +61,7 @@
     "build:dev": "env-cmd -f .dev.env npm run build",
     "build:prod": "env-cmd -f .prod.env npm run build",
     "deploy:dev": "aws s3 cp ./build/ s3://restaurant-frontend --recursive",
-     "deploy:prod": "[[REMOVE THIS]]aws s3 cp ./build/ s3://app.harborbites.com --recursive",
+    "deploy:prod": "[[REMOVE THIS]]aws s3 cp ./build/ s3://app.harborbites.com --recursive",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "docs": "jsdoc -c jsdoc.conf.json"
